feat(core): implement Harness 20 local runtime